@@ -155,6 +155,8 @@ CONTRIBUTORS.txt for full names.  Bug numbers refer to http://bugs.python.org/.
 - The signature of tests.support.LoggingCatcher.get_logs changed, see
   docstring [éric]
 - Rename get_reinitialized_command back to reinitialize_command [éric]
+- Rename install_distinfo's option from distinfo-dir to the more usual
+  install_dir [éric]
 
 
 1.0a3 - 2010-10-08
